--- a/contact.html
+++ b/contact.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Dave's Bed and breakfast</title>
-<meta charset="utf-8">
-<link rel="stylesheet" href="styles/styles.css">
-
+    <title>Dave's Bed and Breakfast - Contact Us</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 <div id="wrapper">
   <header>
-      <h1>Dave's Bed and breakfast</h1>
-      <img src="images/image-3.jpg" class="logo" alt="Logo">
+      <h1>Dave's Bed and Breakfast</h1>
+     
   </header>
   <nav>
   <ul> 
     <li><a href="index.html">Home</a></li>
-	<li><a href="rooms/express.html">Express room</a></li>
-	<li><a href="rooms/standard.html">Standard room</a></li>
-	<li><a href="events/weekend.html">Weekend Events</a></li>
-	<li><a href="contact.html">Contact Us</a></li>
+    <li><a href="rooms/express.html">Express Room</a></li>
+    <li><a href="rooms/standard.html">Standard Room</a></li>
+    <li><a href="events/weekend.html">Weekend Events</a></li>
+    <li><a href="contact.html">Contact Us</a></li>
   </ul>
   </nav>
   <main>
@@ -45,7 +45,6 @@
             <input type="radio" name="source" value="returning" id="returning">
             <label for="returning">Returning Guest</label><br><br>
 
-
             <label for="comments">Comments or Questions *</label><br>
             <textarea id="comments" name="comments" rows="6" cols="50" required placeholder="Tell us about your stay dates, special requests, or any questions..."></textarea><br><br>
 
@@ -54,7 +53,8 @@
     </main>
 
     <footer>
-        Copyright &copy; 2024 Dave's Bed and Breakfast
+        Copyright &copy; 2025 Dave's Bed and Breakfast<br>
+        <a href="mailto:dgluna@amarillocollege.com">David Granados</a>
     </footer>
 </div>
 </body>
